     and MRF noise correction.
(6)  Corrected interpolation behavior to guaranty Dartel resolution in any case.
(7)  Updated VBM12 report. 

------------------------------------------------------------------------
r635 | dahnke | 2014-10-22 14:18:44

M       CHANGES.txt
M       vbm12.fig
M       vbm12.m
M       vbm_tst_pre.m
M       vbm_vol_atlas.m

(1)  Added VBM12 header figure in VBM12 GUI.
------------------------------------------------------------------------
r636 | dahnke | 2014-10-23 08:27:34

M       CHANGES.txt
M       cg_vbm_run_job.m
M       tbx_cfg_vbm.m
M       vbm_spm.m

(1) Added rician flag to cg_vbm_run_job.m.
(2) Added some comments in vbm_spm.m.
(3) Many edits and formattings in tbx_cfg_vbm.m.

------------------------------------------------------------------------
r637 | gaser | 2014-10-23 11:48:33

M       CHANGES.txt
M       cg_vbm_defaults.m
M       html/vbm12.html

Set sanlm flag in cg_vbm_defaults again to "3".

------------------------------------------------------------------------
r638 | gaser | 2014-10-23 11:49:45

M       CHANGES.txt
M       cg_vbm_run_newcatch.m
M       cg_vbm_write.m
M       vbm_vol_atlas.m

(1)  Corrected report error in cg_vbm_write.
(2)  Corrected error handling in cg_vbm_run_newcatch. 
(3)  Prepared further atlas data and xml export in vbm_vol_atlas (not read yet).
------------------------------------------------------------------------
r639 | dahnke | 2014-10-23 12:03:49

M       CHANGES.txt
M       cg_vbm_defs.m

(1)  Added spm_load_float (that was removed in SPM12) into cg_vbm_defs (the only
     function that requires this function.
------------------------------------------------------------------------
r640 | dahnke | 2014-10-23 12:11:32

M       CHANGES.txt
M       cg_vbm_write.m
M       html/vbm12.html

Yb was too early deleted for further surface use.
------------------------------------------------------------------------
r641 | gaser | 2014-10-23 16:10:41